Added files via upload

--- a/10-K Analysis/Stats on dataset.ipynb
+++ b/10-K Analysis/Stats on dataset.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -216,7 +216,7 @@
        "[5 rows x 36 columns]"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -235,16 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -255,7 +246,7 @@
        "1722"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -267,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -292,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -325,7 +316,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -336,7 +327,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "AA       15\n",
+      "ADMGQ     5\n",
+      "AEPI     15\n",
+      "AETCQ     7\n",
+      "AHNCQ     6\n",
+      "AKS      17\n",
+      "ALJJ      3\n",
+      "AMNL      4\n",
+      "APD      19\n",
+      "APFC     14\n",
+      "AREM      3\n",
+      "AROX      1\n",
+      "ASH      10\n",
+      "ATI      15\n",
+      "ATMR      3\n",
+      "ATPL     12\n",
+      "ATR      18\n",
+      "AUMN      5\n",
+      "AVD      13\n",
+      "AVY      17\n",
+      "AXTA      1\n",
+      "AYSI      1\n",
+      "BCC       3\n",
+      "BDLS      7\n",
+      "BERY      2\n",
+      "BLL      17\n",
+      "BMIX      2\n",
+      "BMS      12\n",
+      "BPMI      8\n",
+      "CADC      7\n",
+      "         ..\n",
+      "SWM      11\n",
+      "SWTX      8\n",
+      "SXC       4\n",
+      "SXCP      3\n",
+      "SXT      16\n",
+      "TDYT      1\n",
+      "TGLS      2\n",
+      "TIN      17\n",
+      "TORM      8\n",
+      "TRA      13\n",
+      "TROX      3\n",
+      "UAMY      6\n",
+      "UFS       8\n",
+      "UNRG      5\n",
+      "USLM     17\n",
+      "VAL      17\n",
+      "VHI      14\n",
+      "VKSC     10\n",
+      "VMC       8\n",
+      "VULC      7\n",
+      "WEBC      9\n",
+      "WLKP      1\n",
+      "WMSI      5\n",
+      "WPP      14\n",
+      "X        14\n",
+      "XPL       8\n",
+      "YECO      1\n",
+      "ZEP       8\n",
+      "ZEUS     18\n",
+      "ZOLT      6\n",
+      "dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "firm=np.sum(data['tic'].apply(pd.value_counts).fillna(0))\n",
+    "print(firm)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
@@ -344,61 +416,175 @@
     {
      "data": {
       "text/plain": [
-       "AA       15\n",
-       "APD      19\n",
-       "APFC     14\n",
-       "ASH      11\n",
-       "ATMR      5\n",
-       "AVD      14\n",
-       "AVY      17\n",
-       "BLL      18\n",
-       "BMS      18\n",
-       "BPMI      9\n",
-       "CAS      16\n",
-       "CDE      13\n",
-       "CLF      16\n",
-       "CMC      16\n",
-       "CSKEQ    15\n",
-       "DD       17\n",
-       "DOW      18\n",
-       "DTRX      9\n",
-       "ECL      17\n",
-       "FMC      14\n",
-       "FOE      14\n",
-       "FRD      18\n",
-       "FRK      14\n",
-       "GDRZF     3\n",
-       "GEF      17\n",
-       "GLT      16\n",
-       "GNI      18\n",
-       "GRA      16\n",
-       "HL       16\n",
-       "HMTC      7\n",
-       "HPC       9\n",
-       "HYDI      4\n",
-       "ICOC     15\n",
-       "MTRN     14\n",
-       "RFP       8\n",
-       "RYI       2\n",
-       "TRA       7\n",
-       "VKSC     11\n",
-       "dtype: float64"
+       "19.0"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "np.sum(data['tic'].apply(pd.value_counts).fillna(0))"
+    "firm.max()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.0"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "firm.min()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "APD     19\n",
+       "SHLM    19\n",
+       "FRD     18\n",
+       "RPM     18\n",
+       "MLM     18\n",
+       "GNI     18\n",
+       "ZEUS    18\n",
+       "ATR     18\n",
+       "SHW     18\n",
+       "GEF     17\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "firm.sort_values(ascending=False)[:10]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "PDH     1\n",
+       "YECO    1\n",
+       "RMMI    1\n",
+       "WLKP    1\n",
+       "GRM     1\n",
+       "HYDI    1\n",
+       "AYSI    1\n",
+       "AXTA    1\n",
+       "MDOR    1\n",
+       "MBII    1\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "firm.sort_values(ascending=True)[:10]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9.40983606557377"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "firm.mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "183"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(firm)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5.323729944543429"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "firm.std()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
    },
    "outputs": [],
    "source": []
